trim comments & revise manual

--- a/HUSTopening/HUSTopening.tex
+++ b/HUSTopening/HUSTopening.tex
@@ -1,11 +1,11 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% This template is created by Zhou Feng on 2/21/2019 for the undergraduate thesis
-%opening speech at Huazhong University of Science and Technlogy
-
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND THEMES
-%----------------------------------------------------------------------------------------
-
+% HUSTthesis.tex @ https://github.com/zfengg/HUSTtex/tree/master/HUSTopening
+%
+% 	A simple tex for the opening task of the undergraduate thesis at HUST.
+%
+% author: Zhou Feng @ 2019
+% ---------------------------------------------------------------------------- %
+%                                   preamble                                   %
+% ---------------------------------------------------------------------------- %
 \documentclass{beamer}
 
 %----------------------------------------------------------------%
@@ -195,7 +195,7 @@
 
 
 %----------------------------------------------------------------%
-%Something to improve my work efficiency.
+% to improve work efficiency.
 \newcommand{\comma}{\text{，}}
 \newcommand{\juhao}{\text{。}}
 \newcommand{\fenhao}{\text{；}}
@@ -203,7 +203,7 @@
 \newcommand{\xysolution}[2]{$ x=#1\comma y=#2 $}
 \newcommand{\conalpha}{$ \alpha=\left[a_{1},a_{2},a_{3},\ldots\right] $}
 \newcommand{\parquo}[1]{$ p_{#1}/q_{#1}=\left[a_{1},\ldots,a_{#1-1}\right] $}
-\newcommand{\qfield}[1]{$ \mathbf{Q}\left(\sqrt{#1}\right) $}%二次域每次输入太麻烦了，
+\newcommand{\qfield}[1]{$ \mathbf{Q}\left(\sqrt{#1}\right) $}
 \newcommand{\pelleq}[2]{ $ x^{2}-#1y^{2}=#2 $} % Pell方程
 \newcommand{\mymod}[3]{$ #1\equiv#2\left(\!\!\mod#3\right) $}
 \newcommand{\periodrep}[3]{$ \sqrt{#1}=\left[#2;\overline{#3}\right] $}
@@ -221,14 +221,14 @@
 %----------------------------------------------------------------------------------------
 \title[开题答辩]{标题} % The short title appears at the bottom of every slide, the full title is only on the title page
 \subtitle{副标题}
-\author{姓名} % Your name
-\institute[HUST]{华中科技大学} % Your institution for the title page
-\date{\today} % Date, can be changed to a custom date
+\author{姓名}
+\institute[HUST]{华中科技大学}
+\date{\today}
 
 \begin{document}
 
 \begin{frame}
-	\titlepage % Print the title page as the first slide
+	\titlepage % print the title page
 \end{frame}
 
 
