--- a/HUSTproposal/HUSTproposal.tex
+++ b/HUSTproposal/HUSTproposal.tex
@@ -1,22 +1,16 @@
-%%
-%% This is the file `HUSTproposal.tex' designed for the undergraduate thesis proposal task at Huazhong University of Science and Technology. 
-%% 
-%% 
-%% Copyright (C) 2019~ by Zhou Feng 冯洲 <https://github.com/zfengg>
-%% 
-%% Annoucement:
-%% Since this work is created by Zhou Feng in 2019 to help finish the undergraduate thesis at HUST more efficiently and elegantly, it can only serve for educational and academical purpose while should never be used for commercial or profitable business.
-%% ONLY for the undergratuate thesis at HUST. 
-%% This work has no LPPL maintenance or any other public liscenses like MIT Liscense or General Public Liscenses(GPL). Hence the author take no responsibilites for any loss of the user using this template.
-%% 
-%% The Current Maintainer of this work is Zhou Feng. All the advice is welcomed by sending an e-mail to the mailbox fengzhou1113@gmail.com
-%% 
-%% Aiming to reach more friends, this work directly and only contains the fzHUSTproposal.tex. And I have carefully included all the settings according to the offical documents and explaination after each command line.
-
-%% This file should compiled with XeLaTex. The edit sorftware TexStudio is recommended by zhou.
-
-%% Btw: Be aware that my purpose is to provide a friendly latex template for myself or maybe other HUSTers, so the only thing you need to do before you start your own work is to imitate the example tex file, fzHUSTproposal.tex. Good luck!
-
+% HUSTproposal.tex @ https://github.com/zfengg/HUSTtex/tree/master/HUSTproposal
+%
+% 	A simple tex template for the undergraduate thesis proposal at HUST.
+%
+% author: Zhou Feng @ 2019
+%
+% requirements:
+%	TeX environments: Texlive/MacTeX or MiKTeX
+%	compiler: XeLaTeX
+%
+% ---------------------------------------------------------------------------- %
+%                                   preamble                                   %
+% ---------------------------------------------------------------------------- %
 \documentclass[11pt,a4paper]{article}
 %10.5pt equals 5 hao font. 
 
