--- a/HUSTopening/HUSTopening.tex
+++ b/HUSTopening/HUSTopening.tex
@@ -3,6 +3,11 @@
 % 	A simple tex for the opening task of the undergraduate thesis at HUST.
 %
 % author: Zhou Feng @ 2019
+%
+% requirements:
+%	TeX environments: Texlive/MacTeX or MiKTeX
+%	compiler: XeLaTeX
+%
 % ---------------------------------------------------------------------------- %
 %                                   preamble                                   %
 % ---------------------------------------------------------------------------- %
