fix space between ref heading and items

--- a/HUSTthesis/HUSTthesis.tex
+++ b/HUSTthesis/HUSTthesis.tex
@@ -209,10 +209,10 @@
 % ---------------------------------------------------------------------------- %
 % reference and citation 参考文献
 \usepackage{natbib}
-\renewcommand{\refname}{\centerline{\hei\xiaoerhao 参考文献}}
-%\bibsep=0pt % 用来设置每个\bibitem之间的间距
-% \renewcommand{\bibname}{参考文献} % For the document class 参考文献
-% \newcommand{\upcite}[1]{\textsuperscript{\textsuperscript{\cite{#1}}}} % If you want the citation label to show at the uperscript position.
+\renewcommand{\refname}{\centering\hei\xiaoerhao 参考文献}
+\bibsep=0pt % 用来设置每个\bibitem之间的间距
+% \renewcommand{\bibname}{HUSTthesis} % .bib name
+% \newcommand{\upcite}[1]{\textsuperscript{\textsuperscript{\cite{#1}}}} % show citation label in the upperscript
 
 % ---------------------------------------------------------------------------- %
 % 设置声明页
@@ -620,7 +620,7 @@ $ \times\times\times\times\times\times\times\times\times\times\times\times\times
 
 \bibliographystyle{plain}
 \bibliography{HUSTthesis}\label{bibtexref}
-\hongzifuzhu{第一个参考文献为使用 Bib\TeX 基于$ \mathtt{HUSTthesis.bib} $生成。 如果不使用 Bib\TeX 可删除，然后只用后一个参考文献。}
+\hongzifuzhu{第一个参考文献为使用 Bib\TeX 基于 $ \mathtt{HUSTthesis.bib} $ 生成。 如果不使用 Bib\TeX 可删除，然后只用后一个参考文献。}
 
 
 \begin{thebibliography}{3}
