修复macOS与Linux下宋体粗体无效

--- a/HUSTthesis/HUSTthesis.tex
+++ b/HUSTthesis/HUSTthesis.tex
@@ -50,6 +50,14 @@
 \setCJKmonofont{SimSun} 	% monospace font for \texttt
 % \punctstyle{kaiming}  	% Remove the space used by symbols like comma. Special for the mainland students like us HUSTers.
 \setCJKfamilyfont{song}{SimSun}                       % 宋体 song
+
+%----------------If Linux Or macOS-------------------------------%
+% use the codes bellow instead
+% \setCJKmainfont[BoldFont=SimSun-Bold]{SimSun} 	% set the mainfont of Chinese as songti. (serif) for
+% \setCJKsansfont[BoldFont=SimSun-Bold]{SimSun} 	% sans serif font for \textsf
+% \setCJKmonofont[BoldFont=SimSun-Bold]{SimSun} 	% monospace font for \texttt
+% \setCJKfamilyfont{song}[BoldFont=SimSun-Bold]{SimSun}   % 宋体 song for macOS & maybe Linux
+
 \newcommand{\song}{\CJKfamily{song}}
 \setCJKfamilyfont{kai}{KaiTi}                         % 楷体  kai
 \newcommand{\kai}{\CJKfamily{kai}}
