参考文献格式支持国标

--- a/HUSTthesis/HUSTthesis.tex
+++ b/HUSTthesis/HUSTthesis.tex
@@ -662,7 +662,7 @@ $ \times\times\times\times\times\times\times\times\times\times\times\times\times
 \phantomsection
 \addcontentsline{toc}{section}{参考文献}
 
-\bibliographystyle{plain}
+\bibliographystyle{gbt7714-numerical} %国标格式，若不使用国标，但是要按顺序引用，可以考虑 \bibliographystyle{unsrt}
 \bibliography{HUSTthesis}\label{bibtexref}
 \hongzifuzhu{第一个参考文献为使用 Bib\TeX 基于 $ \mathtt{HUSTthesis.bib} $ 生成。 如果不使用 Bib\TeX 可删除，然后只用后一个参考文献。}
 
