add TexStudio compiler prompt

--- a/HUSTthesis/HUSTthesis.tex
+++ b/HUSTthesis/HUSTthesis.tex
@@ -1,3 +1,4 @@
+%!TEX program = xelatex
 % HUSTthesis.tex @ https://github.com/zfengg/HUSTtex/tree/master/HUSTthesis
 %
 % 	A simple tex template for the undergraduate thesis at HUST.
