add texstudio shebang for xelatex

--- a/HUSTopening/HUSTopening.tex
+++ b/HUSTopening/HUSTopening.tex
@@ -1,3 +1,4 @@
+%!TEX program = xelatex
 % HUSTthesis.tex @ https://github.com/zfengg/HUSTtex/tree/master/HUSTopening
 %
 % 	A simple tex for the opening task of the undergraduate thesis at HUST.
