--- a/HUSTproposal/HUSTproposal.tex
+++ b/HUSTproposal/HUSTproposal.tex
@@ -1,3 +1,4 @@
+%!TEX program = xelatex
 % HUSTproposal.tex @ https://github.com/zfengg/HUSTtex/tree/master/HUSTproposal
 %
 % 	A simple tex template for the undergraduate thesis proposal at HUST.
