--- a/HUSTtrans/HUSTtrans.tex
+++ b/HUSTtrans/HUSTtrans.tex
@@ -1,3 +1,4 @@
+%!TEX program = xelatex
 % HUSTtrans.tex @ https://github.com/zfengg/HUSTtex/tree/master/HUSTtrans
 %
 % 	A simple tex template for the translation task for undergraduate thesis at HUST.
