--- a/HUSTproposal/HUSTproposal.tex
+++ b/HUSTproposal/HUSTproposal.tex
@@ -46,6 +46,11 @@
  \usepackage{ctex}% If you are lazy, the CTEX suit is enough.
  % Chinese Font
  \usepackage{xeCJK}% For the Chinese through XeLaTex
+ \xeCJKsetup{AutoFakeBold=true, % use fake-bold when the bold font is not set priorly
+ 	AutoFakeSlant=true, % for fake-slant, similarly as above
+ 	%			EmboldenFactor=4, % weight for fake-bold, default: 4
+ 	%			SlantFactor=0.167, % angle for fake-slant, default: 0.167 in [-0.999, 0.999]
+ }
  \setCJKmainfont{SimSun} % set the mainfont of Chinese as songti. (serif) for  
  \setCJKsansfont{SimSun} % sans serif font for \textsf
  \setCJKmonofont{SimSun} % monospace font for \texttt
